<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.raven-source</groupId>
    <artifactId>raven-framework</artifactId>
    <packaging>pom</packaging>
    <version>4.0.5-SNAPSHOT</version>

    <modules>
        <module>raven-commons</module>
        <module>raven-commons-data-hibernate-convert</module>
        <module>raven-commons-data-mybatis-convert</module>
        <module>raven-commons-data-spring-convert</module>
        <module>raven-serializer</module>
        <module>raven-serializer-performancetest</module>
        <module>raven-serializer-withJackson</module>
        <module>raven-serializer-withMsgpack</module>
        <module>raven-serializer-withProtobuf</module>
        <module>raven-serializer-withJacksonMsgpack</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <encoding>UTF-8</encoding>
        <java.version>8</java.version>

        <slf4j-api.version>1.7.36</slf4j-api.version>
        <lombok.version>1.18.22</lombok.version>

        <raven-framework.version>${project.version}</raven-framework.version>

        <spring-core.version>5.3.17</spring-core.version>

        <commons-lang3.version>3.12.0</commons-lang3.version>
        <jackson-databind.version>2.13.2</jackson-databind.version>
        <jackson-dataformat-msgpack.version>0.9.1</jackson-dataformat-msgpack.version>
        <mybatis.version>3.5.7</mybatis.version>
        <hibernate-types-52.version>2.14.1</hibernate-types-52.version>
        <hibernate-core.version>5.6.7.Final</hibernate-core.version>
        <msgpack.version>0.6.12</msgpack.version>
        <jprotobuf.version>2.4.10</jprotobuf.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.36</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <dependencyManagement>

        <dependencies>

        </dependencies>

    </dependencyManagement>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>Raven Framework Library</description>
    <url>https://raven-source.github.io/</url>

    <scm>
        <url>https://github.com/Raven-Source/raven-framework-java</url>
        <connection>scm:git:https://github.com/Raven-Source/raven-framework-java.git</connection>
        <developerConnection>scm:git:https://github.com/Raven-Source/raven-framework-java.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>yi.liang</name>
            <email>indifer@126.com</email>
            <organization>raven</organization>
            <organizationUrl>https://github.com/Raven-Source</organizationUrl>
        </developer>
    </developers>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>

                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${encoding}</encoding>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>

                    <encoding>${encoding}</encoding>
                    <charset>${encoding}</charset>
                    <docencoding>${encoding}</docencoding>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <!--<id>sign-artifacts</id>-->
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- mvn versions:set -DprocessAllModules=true -DnewVersion=1.x-SNAPSHOT -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

        </plugins>

    </build>

</project>
